# Guess-Game

./: .gitignore  README.md  bash.exe.stackdump  main.py  manage.py  pyproject.toml  requirements.txt  spec.md
core/: urls.py  views.py
feedback/: admin.py  forms.py  models.py  urls.py  views.py
feedback/migrations/: 0001_initial.py
games/: admin.py  forms.py  models.py  urls.py  views.py
games/migrations/: 0001_initial.py
static/css/: custom.css
templates/: 404.html  500.html  base.html
templates/core/: contact.html  home.html
templates/feedback/: feedback.html
templates/games/: game_new.html  game_play.html  game_result.html  leaderboard.html
templates/users/: login.html  profile.html  profile_edit.html  register.html
the_guess_game/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
