[project]
name = "the-guess-game"
version = "0.1.0"
description = "A full-featured web-based Number Guessing Game built with Django"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "django-browser-reload>=1.21.0",
    "django-tailwind>=4.4.1",
    "pillow>=12.0.0",
]
